[gd_scene load_steps=5 format=3 uid="uid://bqsbslbokh8g4"]

[ext_resource type="Script" uid="uid://bht273c5ft8n" path="res://prefabs/LineupPreview.gd" id="1_jhfet"]
[ext_resource type="PackedScene" uid="uid://canx4b4pr7n3c" path="res://prefabs/BallPlayerCard.tscn" id="2_4d3db"]
[ext_resource type="PackedScene" uid="uid://bm8fw1micckc0" path="res://prefabs/BPCardPreview.tscn" id="3_cr1k1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1u7tg"]
bg_color = Color(0, 0, 0, 1)

[node name="LineupPreview" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1u7tg")
script = ExtResource("1_jhfet")
bp_card_scene = ExtResource("2_4d3db")
bp_card_preview_scene = ExtResource("3_cr1k1")
allow_replacement = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StarterLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Starting Lineup"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StarterContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="BenchLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Bench"

[node name="ScrollContainer2" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BenchContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Exit"

[node name="Button2" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 20
text = "Reset Lineups"
